--- a/public/css/default.css
+++ b/public/css/default.css
@@ -10996,6 +10996,9 @@ footer.footer .level-end .field {
 .footer-logo img {
   max-height: 1.75rem;
 }
+.footer {
+  padding: 3rem 1.5rem 1rem;
+}
 .pagination {
   margin-top: 1.5rem;
 }
@@ -11657,6 +11660,17 @@ figure.highlight .section {
   .section {
     padding: 1.5rem 1rem;
   }
+}
+div.timeline-title a:link {
+  color: #000;
+  text-decoration: underline;
+}
+div.timeline-title a:visited {
+  color: #000;
+  text-decoration: underline;
+}
+.section {
+  padding: 1.5rem 1.5rem;
 }
 .formula {
   width: 100%;
