--- a/themes/icarus/source/css/style.styl
+++ b/themes/icarus/source/css/style.styl
@@ -16,3 +16,14 @@
 @import '../../include/style/donate'
 @import '../../include/style/plugin'
 @import '../../include/style/responsive'
+div.timeline-title a:link {
+  color: #000;
+  text-decoration: underline;
+}
+div.timeline-title a:visited {
+  color: #000;
+  text-decoration: underline;
+}
+.section {
+  padding: 1.5rem 1.5rem;
+}
