--- a/public/css/cyberpunk.css
+++ b/public/css/cyberpunk.css
@@ -11679,6 +11679,9 @@ div.timeline-title a:visited {
 .isMe {
   font-weight: bold;
 }
+.title {
+  font-weight: bold;
+}
 body {
   counter-reset: card;
 }
