--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11681,3 +11681,12 @@ div.timeline-title a:visited {
 .title {
   font-weight: bold;
 }
+.timeline-flex {
+  display: flex;
+}
+.timeline-date {
+  width: 45px;
+  margin: 0px;
+  padding: 0px;
+  flex-shrink: 0;
+}
