--- a/public/css/cyberpunk.css
+++ b/public/css/cyberpunk.css
@@ -11682,6 +11682,15 @@ div.timeline-title a:visited {
 .title {
   font-weight: bold;
 }
+.timeline-flex {
+  display: flex;
+}
+.timeline-date {
+  width: 45px;
+  margin: 0px;
+  padding: 0px;
+  flex-shrink: 0;
+}
 body {
   counter-reset: card;
 }
