--- a/themes/icarus/source/css/style.styl
+++ b/themes/icarus/source/css/style.styl
@@ -36,3 +36,13 @@ div.timeline-title a:visited {
 .title{
   font-weight:bold;
 }
+.timeline-flex {
+  display: flex;
+}
+
+.timeline-date {
+  width: 45px;
+  margin: 0px;
+  padding: 0px;
+  flex-shrink:0;
+}
